--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,8 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
-*.configuration.yaml
+# vscode launch.json
+.vscode
+
+# debug executable
+debug
