:construction: added some more test endpoints

--- a/config.yaml
+++ b/config.yaml
@@ -1,19 +1,31 @@
 name: "/web/v1"
 endpoints:
-  - url: /example
+  - url: /posts
     methods:
       - method: GET
         destination:
-          name: example
-          host: http://example-service
-          url: /endpoint
-  - url: /example/:id
+          name: health
+          host: http://localhost:3000
+          url: /posts
+  - url: /comments
     methods:
       - method: GET
         destination:
-          name: example
-          host: http://example-service
-          url: /endpoint/:id
+          name: get comments
+          host: http://localhost:3000
+          url: /comments
+      - method: POST
+        destination:
+          name: add comment
+          host: http://localhost:3000
+          url: /comments
+  - url: /profile
+    methods:
+      - method: GET
+        destination:
+          name: health
+          host: http://localhost:3000
+          url: /profile
 
 
 
