:recycle: added a logging factory

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
+# HOSTING
 PORT=8080
 
+# AUTHENTICATION
 AUTHENTICATION_PROVIDER=auth0
 AUTH0_DOMAIN={DOMAIN}
 AUTH0_AUDIENCE={API_AUDIENCE}
+
+# LOGGING
+LOGGING_PROVIDER=elk
+LOGGING_ELASTIC_URL=http://localhost:9200
