--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,10 @@ endpoints:
   - url: /posts
     methods:
       - method: GET
+        roles:
+          - "admins"
+        scopes:
+          - "*"
         destination:
           name: health
           host: http://localhost:3000
