:loud_sound: used env for log names and apped date to them

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,7 @@ AUTH0_DOMAIN={DOMAIN}
 AUTH0_AUDIENCE={API_AUDIENCE}
 
 # LOGGING
-LOGGING_PROVIDER=elk
+LOGGING_PROVIDER=elasticsearch
 LOGGING_ELASTIC_URL=http://localhost:9200
+LOGGING_EXTERNAL_REQUEST_INDEX_NAME=api-gateway
+LOGGING_INTERNAL_REQUEST_INDEX_NAME=api-gateway-request
