:wrench: completes #20 - set cors origin via env var

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # HOSTING
 PORT=8080
 
+# CORS
+CORS_ORIGIN=*
+CORS_MAX_AGE=600
+
 # AUTHENTICATION
 AUTHENTICATION_PROVIDER=auth0
 AUTH0_DOMAIN={DOMAIN}
