--- a/data/config.yaml
+++ b/data/config.yaml
@@ -8,7 +8,7 @@ endpoints:
         scopes:
           - "*"
         destination:
-          name: health
+          name: get posts
           host: http://localhost:3000
           url: /posts
   - url: /posts/:id
@@ -19,7 +19,7 @@ endpoints:
         scopes:
           - "*"
         destination:
-          name: health
+          name: get post
           host: http://localhost:3000
           url: /posts/:id
   - url: /comments
@@ -46,7 +46,7 @@ endpoints:
         scopes:
           - "*"
         destination:
-          name: health
+          name: get profile
           host: http://localhost:3000
           url: /profile
 
