:construction_worker: added slack notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ go:
 services:
   - docker
 
+notifications:
+  slack: wdgenterprises:uc36CCmzfnKQWhpvfE1pytCI
+
 script:
  - go test -v ./tests
  - go build -o main.exe app.go
