Bug/#37 roles failure (#38)
* changed to linux/amd64 arch

* fixes #37 - auth0 error with no roles

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ notifications:
 
 script:
  - go test -v ./tests
- - export GOARCH=386
+ - export GOARCH=amd64
  - go build -o main.exe app.go
  - docker build -t turbosonic/api-gateway .
 
